--- a/About_Website/index.html
+++ b/About_Website/index.html
@@ -70,11 +70,11 @@
           <p>Hello! I'm a junior at FAU studying Computer Science and Computer Engineering.</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-          <h3>John Smith
-            <small>Job Title</small>
+          <img class="rounded-circle img-fluid d-block mx-auto" src="team_photos/john_floyd.jpg" alt="John Floyd Headshot">
+          <h3>John Floyd
+            <small>Programmer</small>
           </h3>
-          <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+            <p>I am studying Computer Science at FAU and plan to graduate this Spring 2018.<br />A brief portfolio is viewable <a href="https://lamp.cse.fau.edu/~johnfloyd2016/index.php" target="_blank">here.</a></p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
